Fixing more css alignment

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -212,6 +212,10 @@ footer a {
     text-decoration: none;
 }
 
+.footer p {
+    margin: .4rem;
+}
+
 /*--Main Styling--*/
 
 main {
@@ -336,8 +340,8 @@ figure {
 .event-link {
     background-color: #0d3e5f;
     color: #fff;
-    padding: 5px;
-    margin: .5rem;
+    padding: .3rem;
+    margin: .2rem;
     border-radius: 5px;
     border-style: solid;
     border-color: rgb(241, 207, 37);
@@ -422,11 +426,11 @@ figure {
     grid-row: 5 / 7;
     display: grid;
     grid-template-rows: 1fr 1fr;
+    column-gap: 1rem;
     border-style: solid;
     border-color: #0d3e5f;
     background-color: #0d3e5f;
     text-align: center;
-    justify-content: center;
     padding: .5rem;
     margin: .5rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -435,10 +439,6 @@ figure {
 .spotlight h2, .spotlight p {
     color: #0d3e5f;
     margin: .2rem;
-}
-
-.spotlight img {
-    max-height: 65px;
 }
 
 .spotlight1, .spotlight2, .spotlight3 {
@@ -476,8 +476,7 @@ figure {
     color: #fff;
     align-items: center;
     max-width: 200px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto auto 2rem auto;
     padding:  10px;
 }
 
@@ -485,7 +484,7 @@ figure {
     background-color: #0d3e5f;
     color: #fff;
     padding: 5px;
-    margin: .5rem;
+    margin: 2rem 1rem auto 1rem;
     border-radius: 5px;
     border-style: solid;
     border-color: rgb(241, 207, 37);
